Fix card "extra skills button" wrap

--- a/www/src/card.css
+++ b/www/src/card.css
@@ -1,15 +1,5 @@
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400';
 
-.badgescard {
-  display: flex;
-  justify-content: top;
-  align-items: center;
-}
-
-/* body {
-  
-} */
-
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -30,10 +20,13 @@
   width: 100%;
   min-height: 100px;
   padding: 10px;
-  flex-grow: 0;
-  border-radius: 3px;
-  background-color: white;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  flex: 1 0 100%;
+  border-radius: 5px;
+  overflow: hidden;
+  /* background-color: white; */
+  background-color: var(--color-theme-normal-alpha);
+  /* background-color: var(--color-theme-accent); */
+  box-shadow: 0px 0px 20px var(--color-theme-bold-shadow);
   position: relative;
   overflow: hidden;
 
@@ -65,7 +58,7 @@
 
 .badgescard {
   flex-direction: column;
-  flex: 10 1 15em;
+  flex: 1 1 10rem;
   border-radius: 3px;
   /* color: var(--color-font-title-light); */
   /* width: 100%; */
@@ -86,7 +79,7 @@
   /* border: none; */
   margin-top: 0;
   text-align: center;
-  background-color: var(--color-theme-accent);
+  /* background-color: var(--color-theme-accent); */
 }
 
 .badgescard .inside {
@@ -95,7 +88,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--color-theme-accent);
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2); */
   width: 100%;
   align-content: center;
   flex-wrap: wrap;
@@ -121,7 +114,6 @@
 
 .firstinfo {
   flex-direction: row;
-  z-index: 2;
   position: relative;
   display: flex;
   justify-content: left;
@@ -194,7 +186,8 @@
   margin: 0px 10px 0px 15px;
   display: flex;
   flex-direction: column;
-  flex: 1 1 var(--card-description-basis);
+  flex: 1 0 var(--card-description-basis);
+  min-width: 0;
   /* align-items: stretch; */
   justify-content: space-around;
   /* height: 100%; */
