--- a/www/src/cv.css
+++ b/www/src/cv.css
@@ -4,6 +4,9 @@
    height: 100%;
    flex: 1 1 auto;
    align-items: stretch;
+   box-shadow: 0px 0px 20px var(--color-theme-bold-shadow);
+   border-radius: 5px;
+   overflow: hidden;
 }
 
 .cv-content ul {
@@ -12,7 +15,8 @@
 }
 
 .cv-content .inside {
-   background-color: var(--color-theme-accent);
+   /* background-color: var(--color-theme-accent); */
+   background-color: white;
    /* transition: max-height 0.5s ease; */
 }
 
@@ -51,9 +55,13 @@
   display: block;
   top: 0;
   left: 0;
-  width: 15%;
+  width: var(--cv-inactive-bg-width);
   height: 100%;
   /* height: 100%; */
+}
+
+.inside .cv-chapter-head .bg {
+   width: calc(var(--cv-inactive-bg-width) - var(--cv-inner-offset));
 }
 
 .cv-chapter-head .cv-title {
@@ -104,8 +112,8 @@
 }
 
 .cv-chapter .inside .expand-button {
-   margin-left: 30px;
-   width: calc(100% - 30px);
+   margin-left: var(--cv-inner-offset);
+   width: calc(100% - var(--cv-inner-offset));
 }
 
 .cv-chapter .inside.smooth {
@@ -113,8 +121,8 @@
 }
 
 .cv-chapter .inside .inside .expand-button {
-   margin-left: 60px;
-   width: calc(100% - 60px);
+   margin-left: calc(2*var(--cv-inner-offset));
+   width: calc(100% - 2*var(--cv-inner-offset));
 }
 
 .cv-chapter.inactive .inside {
@@ -189,7 +197,7 @@
 
 ::-webkit-scrollbar
 {
-	width: 0.8em;
+	width: 0.5rem;
 	background-color: var(--color-theme-normal);
 }
 
@@ -219,6 +227,7 @@
    /* border-width: 0 8px 0 8px; */
    border-style: solid;
    padding: 0;
+   background-color: white;
 }
 
 .active .cv-text {
@@ -226,7 +235,8 @@
    /* border-left-width: 0.5rem; */
    /* border-width: 0.5rem 0 0 0.5rem; */
    border-width: 0.35rem 0.5rem 0.35rem 0.5rem;
-   border-color: var(--color-theme-accent);
+   /* border-color: var(--color-theme-accent); */
+   border-color: white;
 }
 
 .cv-text {
